fix: image aligns with left hand side

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
 
 img {
   width: 550px;
-  height: 200px;
+  height: 220px;
   margin-right: 200px;
-  padding-bottom: 50px;
+  padding-bottom: 35px;
 }
